Fix module exports, URL deprecation, resource leak, and FXML property bug
- module-info.java: added missing exports (model, quiz, utils) and
  requires transitive (javafx.graphics, java.sql) so cross-module
  types (DeltaSyncService, TopicItem, SyncQueueItem, Connection,
  Stage) are properly accessible.
- Replaced deprecated new URL(String) with URI.create(String).toURL()
  across LoginController, GroupSelectionController, QuizPopupService,
  QuizModalController, RegisterController, DeltaSyncService, and
  NetworkUtil.
- LoginController: fixed Scanner resource leak with try-with-resources.
- GroupSelectionController: removed unused imports (NetworkUtil,
  OutputStream, StandardCharsets).
- group-selection-view.fxml: fixed invalid 'disabled' property to
  correct JavaFX property name 'disable', resolving a crash on
  group-selection screen load.